2001-08-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_tag.c (fn_tag): strcmp returns int, so compare with 0.

	* tty.c: if we're using tparam replacement, declare it.

	* tty.c (tty_put0): new function (was macro), adapt users.
	* tty.h: remove prototype for fputchar().  make tty_put0() a
	function and adapt using macros.

	* tty.c: if present, include termcap.h.  Adapt for gratuitous
	differences of termcap implementations.
	* fputchar.c (fputchar): make return type dependent on termcap
	library we're using.
	* configure.in: check for termcap.h if using libtermcap.  Set one
	of USE_TERMCAP, USE_CURSES, or USE_NCURSES to indicate which lib
	we're using.

2001-08-01  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_retr): set *sizep to -1 if we cannot extract a size
	from the response.

2001-07-31  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sockets.c (sopen): don't include '\n' in disp_status message.

2001-07-30  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* list.c: include <string.h> for strlen(3) prototype.
	* display.c: include <string.h> for strlen(3) prototype.
	* fn_bind.c: include <string.h> for memcpy(3) prototype.

	* options.op (stall-timeout): new option.

	* main.c (main): if initial url is file, download before listing
	directory.

	* ftp.c (ftp_cat): check for sig_intr after calling
	_ftp_update_transfer.
	* ftp.c (_ftp_update_transfer): detect stalled connections, abort
	(by setting sig_intr) after opt_stall seconds.

2001-03-29  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_cat): new parameter (upload: direction of ASCII
	conversion); changed callers.
	(_ftp_host2ascii): new function.
	(ftp_cat, _ftp_ascii2host): use two buffers in ASCII<->host
	conversion.  chose ASCII conversion based on transfer direction.
	(_ftp_transfer_stats_init, _ftp_transfer_stats_cleanup): new
	functions.
	(ftp_cat): use struct _ftp_transfer_stats.
	(_ftp_update_transfer): rewritten to use struct _ftp_tranfer_stats
	and to be correct.
